[gd_scene load_steps=6 format=3 uid="uid://d201w05v3y3ft"]

[ext_resource type="Script" path="res://IceCream/Blender/Wand.gd" id="1_3kg20"]
[ext_resource type="Texture2D" uid="uid://be2ba20k144r8" path="res://IceCream/Resources/WandIcon.tres" id="2_saggd"]

[sub_resource type="Animation" id="Animation_ll7ul"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.28319]
}

[sub_resource type="Animation" id="Animation_a17tr"]
resource_name = "rotation"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ProgressBar:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [100.0, 100.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_rotation_complete"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xuama"]
_data = {
"RESET": SubResource("Animation_ll7ul"),
"rotation": SubResource("Animation_a17tr")
}

[node name="Wand" type="Node2D"]
script = ExtResource("1_3kg20")

[node name="Head" type="Node2D" parent="."]

[node name="ProgressBar" type="TextureProgressBar" parent="Head"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -41.0
offset_right = 53.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
value = 100.0
fill_mode = 4

[node name="Sprite2D" type="Sprite2D" parent="Head"]
texture_filter = 1
rotation = 6.28319
texture = ExtResource("2_saggd")
offset = Vector2(-1, -1)
region_enabled = true
region_rect = Rect2(0, 0, 96, 96)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head"]
libraries = {
"": SubResource("AnimationLibrary_xuama")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="LateTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="LateTimer" to="." method="_on_late_timer_timeout"]
